# Harjoitustyo

./: .pylintrc  README.md  pyproject.toml
dokumentaatio/: Määrittelydokumentti.md
dokumentaatio/viikkoraportit/: Viikkoraporrti  Viikkoraportti  Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md
src/: connect4.py  minmaxalgorithm.py
src/tests/: connect4_test.py  minmxalgorithm_test.py
