[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Kissaniemi <noora.emilia.koponen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.5"
autopep8 = "^2.3.1"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
